fixed attributes not showing up

--- a/reason_4.0/www/local/luther_2014/stylesheets/base.css
+++ b/reason_4.0/www/local/luther_2014/stylesheets/base.css
@@ -4223,68 +4223,78 @@ footer .contactBlurb {
   margin-left: 1.25rem;
 }
 /* line 53, scss/modules/_directory.scss */
+#directory .directoryContact li span.attribute {
+  position: static;
+  width: 125px;
+  display: inline-block;
+}
+/* line 58, scss/modules/_directory.scss */
+#directory .directoryContact li span.attribute strong {
+  position: static;
+}
+/* line 63, scss/modules/_directory.scss */
 #directory .directoryContact li {
   margin-left: 2.5rem;
 }
-/* line 61, scss/modules/_directory.scss */
+/* line 71, scss/modules/_directory.scss */
 #directory .directoryContact li:before {
   width: 2rem;
   margin-left: -2.25rem;
   text-align: center;
 }
-/* line 72, scss/modules/_directory.scss */
+/* line 82, scss/modules/_directory.scss */
 #directory .directoryContact .directoryOffice:before {
   content: "\f041";
 }
-/* line 78, scss/modules/_directory.scss */
+/* line 88, scss/modules/_directory.scss */
 #directory .directoryContact .directoryPhone:before {
   content: "\f095";
 }
-/* line 84, scss/modules/_directory.scss */
+/* line 94, scss/modules/_directory.scss */
 #directory .directoryContact .directoryEmail:before {
   content: "\f1fa";
 }
-/* line 90, scss/modules/_directory.scss */
+/* line 100, scss/modules/_directory.scss */
 #directory .directoryContact .directoryStudentResidence:before {
   content: "\f1ad";
 }
-/* line 96, scss/modules/_directory.scss */
+/* line 106, scss/modules/_directory.scss */
 #directory .directoryContact .directorySPO:before {
   content: "\f0e0";
 }
-/* line 102, scss/modules/_directory.scss */
+/* line 112, scss/modules/_directory.scss */
 #directory .directoryContact .directoryUsername:before {
   content: "\f007";
 }
-/* line 108, scss/modules/_directory.scss */
+/* line 118, scss/modules/_directory.scss */
 #directory .directoryContact .directoryAffiliations:before {
   content: "\f0c0";
 }
-/* line 114, scss/modules/_directory.scss */
+/* line 124, scss/modules/_directory.scss */
 #directory .directoryContact .directoryHomeAddress:before {
   content: "\f015";
 }
-/* line 120, scss/modules/_directory.scss */
+/* line 130, scss/modules/_directory.scss */
 #directory .directoryContact .directoryMobile:before {
   content: "\f10b";
 }
-/* line 126, scss/modules/_directory.scss */
+/* line 136, scss/modules/_directory.scss */
 #directory .directoryContact .directoryBirthday:before {
   content: "\f1fd";
 }
-/* line 132, scss/modules/_directory.scss */
+/* line 142, scss/modules/_directory.scss */
 #directory .directoryContact .directoryLastUpdate:before {
   content: "\f1da";
 }
-/* line 138, scss/modules/_directory.scss */
+/* line 148, scss/modules/_directory.scss */
 #directory .directoryContact .directoryDepartment:before {
   content: "\f19c";
 }
-/* line 144, scss/modules/_directory.scss */
+/* line 154, scss/modules/_directory.scss */
 #directory .directoryContact .directoryAdvisor:before {
   content: "\f19d";
 }
-/* line 156, scss/modules/_directory.scss */
+/* line 166, scss/modules/_directory.scss */
 #directory .directoryContact .directoryTerms:before {
   content: "\f02d";
 }
