--- a/reason_4.0/www/local/luther_2014/stylesheets/scss/modules/_directory.scss
+++ b/reason_4.0/www/local/luther_2014/stylesheets/scss/modules/_directory.scss
@@ -50,6 +50,16 @@
     margin-top: $column-gutter/1.75;
     margin-left: $column-gutter/2;
 
+    li span.attribute{
+      position: static;
+      width: 125px;
+      display: inline-block;
+
+      strong{
+        position: static;
+      }
+    }
+
     li {
 
       margin-left: rem-calc(40);
